# hid-rgb-ctl

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml
examples/: README.md  meteor_scan.sh  rainbow.sh  rainbow_wave.sh
hid_rgb_ctl/: __init__.py  __main__.py  cli.py  descriptor.py  device.py
src/: cli.rs  descriptor.rs  device.rs  error.rs  lib.rs  main.rs
