[package]
name = "hid-rgb-ctl"
exclude = ["examples/*", ".github/*"]
version = "0.2.0"
edition = "2021"
description = "Control RGB lighting on HID LampArray and LED Page devices on Linux"
license = "MIT"
authors = ["Xiangzhe <xiangzhedev@gmail.com>"]
repository = "https://github.com/xz-dev/hid-rgb-ctl"
readme = "README.md"
categories = ["command-line-utilities", "hardware-support"]
keywords = ["hid", "rgb", "led", "lamparray", "linux"]

[dependencies]
lexopt = "0.3"
libc = "0.2"

[[bin]]
name = "hid-rgb-ctl"
path = "src/main.rs"

[lib]
name = "hid_rgb_ctl"
path = "src/lib.rs"
