[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hid-rgb-ctl"
version = "0.1.2"
description = "Control RGB lighting on HID LampArray and LED Page devices on Linux"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Xiangzhe", email = "xiangzhedev@gmail.com" }]
classifiers = [
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3",
]

[project.scripts]
hid-rgb-ctl = "hid_rgb_ctl.cli:main"

[project.urls]
Homepage = "https://github.com/xz-dev/hid-rgb-ctl"
Issues = "https://github.com/xz-dev/hid-rgb-ctl/issues"
